<resources>
    <string name="app_name">PaymentsApp</string>

    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="signIn">Login</string>
    <string name="authorization">Authorization</string>
    <string name="remember_me">Remember me</string>

    <string name="enter_user_name">User name is empty</string>
    <string name="password_is_short">The password must be at least 5 sims!</string>
    <string name="empty_login_fileds">Username and password are empty\n</string>
    <string name="logout">Logout</string>
    <string name="payments">Payments</string>
    <string name="logout_image">logout_image</string>

</resources>