<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.fragment.paymentsList.PaymentsListFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:background="?attr/colorPrimary">

        <TextView
            style="@style/MediumPrimaryText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/payments"
            android:layout_marginStart="16dp"
            android:layout_weight="1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:id="@+id/logout_main_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:focusable="true"
            android:layout_marginEnd="16dp"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="?attr/colorPrimary"
                android:src="@drawable/baseline_logout_24"
                android:contentDescription="@string/logout_image" />

            <TextView
                style="@style/SmallPrimaryText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/logout" />

        </LinearLayout>

    </LinearLayout>

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/refresh_payments"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.fragment.paymentsList.PaymentsListFragment">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/paymentsListView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:isScrollContainer="false"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            tools:listitem="@layout/payment_list_item" />

    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

</LinearLayout>